part2/app2-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
spec:
  replicas: 3 # Nombre de pods (instances) à lancer
  selector:
    matchLabels:
      app: app2 # Doit correspondre au 'selector' de ton app2-service.yaml
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: nginx-app2
        image: nginx:alpine # Image légère de Nginx
        ports:
        - containerPort: 80 # Le port sur lequel Nginx écoute dans le conteneur
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html # Dossier où Nginx lit ses pages web
      volumes:
      - name: html-volume
        configMap:
          name: app2-config # On lie le ConfigMap créé au-dessus à ce volume
