part2/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service  # doit correspondre au nom du service dans l'ingress
spec:
  selector:
    app: app1  # doit correspondre au label de l'application dans le déploiement
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
